Fixing the problem with the auto-renew script

--- a/sb.example.conf
+++ b/sb.example.conf
@@ -1,7 +1,16 @@
 server {
     listen 80;
     server_name domain.tld www.domain.tld;
-    return 301 https://$host$request_uri;
+
+    # The folder where your website is hosted.
+    # You don't have to create the subfolder .well-known
+    location /.well-known {
+        alias /var/www/domain.tld/.well-known;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
