--- a/sb.example.conf
+++ b/sb.example.conf
@@ -1,12 +1,9 @@
+# Replace DOMAIN.TLD in the server block below for your domain name:
+# For example: DOMAIN.TLD = vinicius.io
+
 server {
     listen 80;
-    server_name domain.tld www.domain.tld;
-
-    # The folder where your website is hosted.
-    # You don't have to create the subfolder .well-known
-    location /.well-known {
-        alias /var/www/domain.tld/.well-known;
-    }
+    server_name DOMAIN.TLD www.DOMAIN.TLD;
 
     location / {
         return 301 https://$host$request_uri;
@@ -15,11 +12,11 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name domain.tld www.domain.tld;
+    server_name DOMAIN.TLD www.DOMAIN.TLD;
 
     # SSL certificates
-    ssl_certificate /etc/letsencrypt/live/domain.tld/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/domain.tld/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/DOMAIN.TLD/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/DOMAIN.TLD/privkey.pem;
 
     # Implement OCSP Stapling (https://letsencrypt.org/docs/integration-guide/)
     ssl_stapling on;
@@ -29,6 +26,6 @@ server {
     add_header Strict-Transport-Security "max-age=31536000";
 
     location / {
-        root /var/www/domain.tld;
+        root /var/www/DOMAIN.TLD;
     }
 }
