Updated the documentation

--- a/serverblock/redirect_to_tls.conf
+++ b/serverblock/redirect_to_tls.conf
@@ -1,6 +1,7 @@
 # Replace DOMAIN.TLD in the server block below for your domain name:
 # For example: DOMAIN.TLD = vinicius.io
 
+# We listen to any request done on port 80 (http) and redirect it to port port 443 (https)
 server {
     listen 80;
     server_name DOMAIN.TLD www.DOMAIN.TLD;
@@ -10,11 +11,13 @@ server {
     }
 }
 
+# Listen to any request done on port 443 (https). All other connections must be redirected here. Also, we have http2
+# enabled by default.
 server {
     listen 443 ssl http2;
     server_name DOMAIN.TLD www.DOMAIN.TLD;
 
-    # SSL certificates
+    # Set the path to the TLS certificates
     ssl_certificate /etc/letsencrypt/live/DOMAIN.TLD/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/DOMAIN.TLD/privkey.pem;
 
@@ -25,7 +28,9 @@ server {
     # Remind the browser to continue to use HTTPS in the future
     add_header Strict-Transport-Security "max-age=31536000";
 
+    # Send the user to the correct destination. It can be either http or https at this point because the user is already
+    # protected under a secure connection.
     location / {
-        root /var/www/DOMAIN.TLD;
+        proxy_pass https://DOMAIN.TLD;
     }
 }
