--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,16 +1,14 @@
-name: build
+name: cron
 
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron: '0 0 1 * *'
 
 env:
   IMAGE_NAME: vegidio/nginx
 
 jobs:
   push:
-    if: "!contains(github.event.head_commit.message, '[skip-ci]')"
     runs-on: ubuntu-latest
     
     steps:
@@ -47,9 +45,10 @@ jobs:
         with:
           tag_name: ${{ steps.calver.outputs.date }}
           release_name: Release ${{ steps.calver.outputs.date }}
+          body: Recurring build to use the latest version of Nginx
 
       - name: Push new image to the registry
         run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin 
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker push $IMAGE_NAME:latest
           docker push $IMAGE_NAME:${{ steps.calver.outputs.date }}
