--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build and run the Docker image
         run: |
-          docker build -t $IMAGE_NAME .
+          docker build -t $IMAGE_NAME --build-arg VERSION=${{ steps.calver.outputs.date }} .
           docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ steps.calver.outputs.date }}
           docker run -d -p 80:80 -p 443:443 --name nginx $IMAGE_NAME:${{ steps.calver.outputs.date }}
 
